update attacking